# multi_bfcl

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  makefile  mkdocs.yaml  pyproject.toml
src/multi_bfcl/: __init__.py  data_loading.py  data_models.py  languages.py  llm.py  translation.py
src/scripts/: main.py  translate_bfcl.py
tests/: __init__.py
