[project]
name = "multi_bfcl"
version = "0.0.0"
description = "Machine-translated version of the BFCL-v2 benchmark."
readme = "README.md"
authors = [
    {name = "Dan Saattrup Smart", email = "dan.smart@alexandra.dk"},
]
maintainers = [
    {name = "Dan Saattrup Smart", email = "dan.smart@alexandra.dk"},
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "datasets>=4.8.4",
    "litellm>=1.82.6",
]

[project.urls]
Repository = "https://github.com/alexandrainst/multi_bfcl"
Issues = "https://github.com/alexandrainst/multi_bfcl/issues"

[project.license]
file = "LICENSE"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.2.1",
    "pre-commit>=4.3.0",
    "readme-coverage-badger>=1.0.1",
    "click>=8.2.1",
    "ruff>=0.15.1",
    "pyrefly>=0.52.0",
    "nbstripout>=0.9.0",
    "coverage>=7.10.5",
    "mkdocs-material>=9.6.18",
    "mkdocs-include-markdown-plugin>=7.1.6",
    "mkdocs-include-dir-to-nav>=1.2.0",
    "mkapi>=4.4.5",
    "pip>=25.3.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
]
extend-include = [
    "*.ipynb",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint]
preview = true
select = [
    # Imports
    "I",
    "PLC0415",
    # Docstrings
    "D",
    "DOC",
    # pycodestyle errors and warnings (PEP8)
    "E",
    "W",
    # flake-annotations (type hints)
    "ANN",
    # Pyflakes
    "F",
]
ignore = [
    # Type annotations for "self" arguments
    "ANN101",
    # Type annotations for "cls" arguments
    "ANN102",
    # Type annotations for *args
    "ANN002",
    # Type annotations for **kwargs
    "ANN003",
]

[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    "F401",
]
"src/scripts/main.py" = [
    "I",
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyrefly.errors]
missing-import = false
missing-attribute = false
not-iterable = false
no-matching-overload = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    '--durations=10',
    '--color=yes',
    '--doctest-modules',
    '--cov=src/multi_bfcl',
]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ImportWarning",
    "ignore::ResourceWarning",
    "ignore::FutureWarning",
]
log_cli_level = "info"
testpaths = [
    "tests",
    "src/multi_bfcl",
]

[tool.pyrefly]
site-package-path = [".venv/lib/python3.12/site-packages"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
